# tauri-draft

./: .gitignore  README.md  draft.sql  index.html  package-lock.json  package.json  vite.config.mjs
src/: App.vue
src-tauri/: .taurignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/models/: blazefaces-640.onnx
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/blazeface/: face_manager.rs  mod.rs
src-tauri/src/commands/book/: mod.rs
src-tauri/src/commands/config/: mod.rs
src-tauri/src/commands/detectyunet2023/: mod.rs
src-tauri/src/commands/draft/: mod.rs
src-tauri/src/commands/envpath/: env_path.rs  mod.rs
src-tauri/src/commands/fileio/: mod.rs
src-tauri/src/commands/greet/: mod.rs
src-tauri/src/commands/listmap/: mod.rs
src-tauri/src/commands/popula/: mod.rs
src-tauri/src/commands/recog2021/: mod.rs
src-tauri/src/commands/sqlx/: mod.rs
src-tauri/src/commands/tcp/: client.rs  mod.rs  server.rs
src-tauri/src/commands/thread/: mod.rs
src-tauri/src/commands/udp/: broadcaster_udp.rs  mod.rs  multicast_udp.rs
src-tauri/src/dao/: book_dao.rs  mod.rs  popula_dao.rs
src-tauri/src/dto/: book.rs  mod.rs  page.rs  param.rs  parse.rs  popula.rs  sql.rs  statics.rs  student.rs  tablesql.rs  teacher.rs
src-tauri/src/util/: config.rs  mod.rs
src/components/landing/: FooterWidget.vue
src/layout/: AppFooter.vue  AppMenu.vue  AppTopbar.vue
src/router/: index.js
src/util/: dateutil.js
src/views/draft/: BlazeFace.vue  CRUD.vue  Config.vue  DetectYunet2023.vue  File.vue  (+14 more)
(+1 files in other folders)
