[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["protocol-asset"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.0.0-rc"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "macros"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.8.0"
serde_with = { version = "1.0", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = {version = "1.17.0", features = ["v4"] }
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
